--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.137.1:3306/test?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
